--- a/app/index.html
+++ b/app/index.html
@@ -56,10 +56,20 @@
 </head>
 <body ng-app="lcaApp">
 <div class="container">
-<h3>Used Oil Life Cycle Assessment</h3>
-<div ncy-breadcrumb></div>
-<div ui-view></div>
-<span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-lca"></span>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Used Oil LCA</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li ui-sref-active="active"><a ui-sref="scenarios">Scenarios</a></li>
+                <li ui-sref-active="active"><a ui-sref="fragment-lcia({fragmentID:8})">Fragment LCIA</a></li>
+            </ul>
+        </div>
+    </nav>
+    <!--<div ncy-breadcrumb></div>-->
+    <div ui-view></div>
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-lca"></span>
 </div>
 </body>
 </html>
