--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li ui-sref-active="active"><a ui-sref="scenarios">Scenarios</a></li>
-                <li ui-sref-active="active"><a ui-sref="fragment-lcia({fragmentID:8})">Fragment LCIA</a></li>
+                <li ui-sref-active="active"><a ui-sref="fragment-lcia">Fragment LCIA</a></li>
             </ul>
         </div>
     </nav>
