--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,9 @@
     <script src="components/idmap/idmap-service.js"></script>
     <script src="components/format/format.js"></script>
     <script src="components/lcia-bar-chart/lcia-bar-directive.js"></script>
+    <script src="components/resources/lcia-method-extension.js"></script>
     <script src="components/resources/resource-service.js"></script>
+    <script src="components/resources/resources.js"></script>
     <script src="components/sankey/sankey.js"></script>
     <script src="components/sankey/sankey-directive.js"></script>
     <script src="components/sankey/sankey-service.js"></script>
