--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
     <script src="components/sankey/sankey-directive.js"></script>
     <script src="components/sankey/sankey-service.js"></script>
     <script src="components/set/set-service.js"></script>
-    <script src="scenarios/scenarios.js"></script>
+    <script src="home/home.js"></script>
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
@@ -64,7 +64,6 @@
                 <a class="navbar-brand" href="#">Used Oil LCA</a>
             </div>
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active"><a ui-sref="scenarios">Scenarios</a></li>
                 <li ui-sref-active="active"><a ui-sref="fragment-lcia">Fragment LCIA</a></li>
             </ul>
         </div>
