Vis: Add panels and color code methods on home page (#90)

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,29 +1,43 @@
 <!-- Partial html for home page -->
 <alert ng-show="alert" type="{{alert.type}}">{{alert.msg}}</alert>
-<h4>Scenarios</h4>
-<table class="table table-condensed">
-    <thead>
-    <tr><th>Name</th><th>Activity Level</th><th>Top Level Fragment</th></tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="scenario in scenarios">
-        <td>{{scenario.name}}</td>
-        <td>{{scenario.activityLevel | numFormat}}</td>
-        <td><a ui-sref=".fragment({scenarioID: scenario.scenarioID,
+<div class="panel panel-default">
+    <div class="panel-heading">Scenarios</div>
+    <table class="table table-condensed">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Activity Level</th>
+            <th>Top Level Fragment</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="scenario in scenarios">
+            <td>{{scenario.name}}</td>
+            <td>{{scenario.activityLevel | numFormat}}</td>
+            <td><a ui-sref=".fragment({scenarioID: scenario.scenarioID,
         fragmentID: scenario.topLevelFragmentID})">{{fragments[scenario.topLevelFragmentID].name}}</a></td>
-    </tr>
-    </tbody>
-</table>
-<h4>LCIA Methods</h4>
-<table class="table table-condensed">
-    <thead>
-    <tr><th>Active</th><th>Name</th></tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="method in lciaMethods">
-        <td><input type="checkbox" ng-model="method.isActive" ng-change="method.storeIsActive()"></td>
-        <td>{{method.name}}</td>
-    </tr>
-    </tbody>
-</table>
-
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">LCIA Methods</div>
+    <table class="table table-condensed">
+        <thead>
+        <tr>
+            <th>Active</th>
+            <th>Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="method in lciaMethods">
+            <td >
+                <label>
+                    <input type="checkbox" ng-model="method.isActive" ng-change="method.storeIsActive()">
+                </label>
+            </td>
+            <td ng-style="{'background-color' : method.getDefaultColor()}">{{method.name}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
