--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -9,7 +9,11 @@
     <div ng-repeat="method in methods" class="col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading" ng-style="{'background-color' : method.getDefaultColor()}">
-                <dt>{{method.getShortName()}}</dt>
+                <dt>
+                    <a ui-sref="lcia-method({lciaMethodID: method.lciaMethodID})">
+                        {{method.getShortName()}}
+                    </a>
+                </dt>
                 <dd>{{method.referenceFlowProperty.name}}</dd>
             </div>
             <div class="panel-body">
