--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
     <script src="components/d3-tip/tip-service.js"></script>
     <script src="components/idmap/idmap-service.js"></script>
     <script src="components/format/format.js"></script>
+    <script src="components/fragment-navigation/fragment-navigation-service.js"></script>
     <script src="components/lcia-bar-chart/lcia-bar-directive.js"></script>
     <script src="components/resources/lcia-method-extension.js"></script>
     <script src="components/resources/resource-service.js"></script>
