--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -3,22 +3,39 @@
 
 <div class="row">
     <div class="col-md-8">
-        <dl class="dl-horizontal">
-            <h4>Process LCIA</h4>
+        <h4>Process LCIA</h4>
+        <dl class="dl-horizontal" ng-if="activityLevel">
             <dt>Scenario</dt>
             <dd>{{scenario.name}}</dd>
-            <dt>Fragment</dt>
-            <dd>
-            <span ng-repeat="navFrag in navigationService.getAll()">
-                 <span><a class="fragment-link" ng-click="goBackToFragment($index)">{{navFrag.name}}</a></span>
-                 <span ng-if="!$last"> > </span>
+            <span ng-if="navigationStates.length">
+                <dt>Fragment</dt>
+                <dd>
+                <span ng-repeat="navFrag in navigationStates">
+                     <span><a class="fragment-link" ng-click="goBackToFragment($index)">{{navFrag.name}}</a></span>
+                     <span ng-if="!$last"> > </span>
+                </span>
+                </dd>
             </span>
-            </dd>
             <dt>Activity Level</dt>
             <dd>{{activityLevel | numFormat}}</dd>
             <dt>Process</dt>
             <dd>{{process.name}}</dd>
         </dl>
+        <div ng-if="!activityLevel">
+            <p>
+                <label>Scenario</label>
+                <select ng-model="scenario" ng-options="s.name for s in scenarios"
+                        ng-change="onScenarioChange()">
+                </select>
+            </p>
+
+            <p>
+                <label>Process</label>
+                <select ng-model="process" ng-options="p.name for p in processes"
+                        ng-change="onProcessChange()" style="width:50%">
+                </select>
+            </p>
+        </div>
         <ul class="list-unstyled">
             <li ng-repeat="method in lciaMethods" class="lcia-method">
                 <div class="panel panel-default">
