Vis: Process LCIA view - handle scenario, process change (#98)

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li ui-sref-active="active"><a ui-sref="fragment-lcia">Fragment LCIA</a></li>
+                <li ui-sref-active="active"><a ui-sref="process-lcia">Process LCIA</a></li>
             </ul>
         </div>
     </nav>
