--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <script src="components/format/format.js"></script>
     <script src="components/fragment-navigation/fragment-navigation-service.js"></script>
     <script src="components/lcia-bar-chart/lcia-bar-directive.js"></script>
+    <script src="components/models/factor-model-service.js"></script>
     <script src="components/models/param-model-service.js"></script>
     <script src="components/resources/lcia-method-extension.js"></script>
     <script src="components/resources/resource-service.js"></script>
