Vis: Display Param indicator in Process LCIA legend

--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -56,7 +56,7 @@
                             <dd>{{method.referenceFlowProperty.name}}</dd>
                         </dl>
                         <div class="lcia-bar-container">
-                            <lcia-bar-chart lcia="lciaResults[method.lciaMethodID]"
+                            <lcia-bar-chart lcia="lciaResults[method.lciaMethodID].detail"
                                             flows="elementaryFlows"></lcia-bar-chart>
                         </div>
                     </div>
