Vis: Create scenario WIP for #116

--- a/app/scenario/scenario-form.html
+++ b/app/scenario/scenario-form.html
@@ -13,7 +13,8 @@
     <div class="control-group">
         <label class="control-label" for="selectType">Type</label>
         <div class="controls">
-            <select id="selectType" ng-model="scenario.topLevelFragmentID" ng-options="fragmentID as fragment.name for fragment in fragments" required></select>
+            <select id="selectType" ng-model="scenario.topLevelFragmentID"
+                    ng-options="fragmentID as fragment.name for fragment in fragments" required></select>
         </div>
     </div>
 
