--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,7 +1,11 @@
 <!-- Partial html for home page -->
 <alert ng-show="alert" type="{{alert.type}}">{{alert.msg}}</alert>
 <div class="panel panel-default">
-    <div class="panel-heading">Scenarios</div>
+    <div class="panel-heading">
+        <span>Scenarios</span>
+        <button class="btn btn-sm pull-right" ng-click="createScenario()">New</button>
+        <div class="clearfix"></div>
+    </div>
     <table class="table table-condensed">
         <thead>
         <tr>
@@ -22,6 +26,7 @@
         </tr>
         </tbody>
     </table>
+
 </div>
 <div class="panel panel-default">
     <div class="panel-heading">LCIA Methods</div>
