--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
+    <script src="scenario/scenario-edit.js"></script>
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
