--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Used Oil LCA</a>
+                <a class="navbar-brand" ui-sref="home">Used Oil LCA</a>
             </div>
             <ul class="nav navbar-nav">
                 <li ui-sref-active="active"><a ui-sref="fragment-lcia">Fragment LCIA</a></li>
