Vis: Use accordion and ng-grid directives in LCIA Method detail view (for #127)

--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
     <link rel="stylesheet" href="components/lcia-detail/lcia-bar-chart.css">
     <link rel="stylesheet" href="components/sankey/sankey.css">
     <link rel="stylesheet" href="components/waterfall/waterfall-chart.css">
     <link rel="stylesheet" href="app.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
@@ -30,6 +33,7 @@
     <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
     <script src="app.js"></script>
     <script src="components/color-code/color-code.js"></script>
     <script src="components/d3-tip/tip-service.js"></script>
