Vis: Remember scenario selection (for #127)

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <script src="components/lcia-detail/lcia-detail-service.js"></script>
     <script src="components/models/factor-model-service.js"></script>
     <script src="components/models/param-model-service.js"></script>
+    <script src="components/models/scenario-model-service.js"></script>
     <script src="components/name/name-service.js"></script>
     <script src="components/resources/lcia-method-extension.js"></script>
     <script src="components/resources/resource-service.js"></script>
