Vis: Create CharacterizationParam  (WIP for #144)

--- a/app/lcia-method/lcia-method-detail.html
+++ b/app/lcia-method/lcia-method-detail.html
@@ -43,6 +43,6 @@
                     ng-change="onScenarioChange()"></select>
         </span>
     </div>
-    <div class="gridStyle" ng-grid="gridOptions"></div>
+    <div class="gridStyle" ng-grid="gridOptions" ng-style="dynamicGridStyle"></div>
 </div>
 
