--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="home/home.js"></script>
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
+    <script src="process-flow-param/process-flow-param.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
     <script src="scenario/scenario-edit.js"></script>
     <script src="components/version/version.js"></script>
