Vis: Apply Process LCIA flow param changes (WIP for #119)

--- a/app/process-flow-param/process-flow-param.html
+++ b/app/process-flow-param/process-flow-param.html
@@ -12,7 +12,7 @@
         <dd>{{lciaMethod.name}}</dd>
     </dl>
     <div>
-        <button class="btn btn-sm pull-right" ng-disabled="noValidChanges()" ng-click="applyChanges()">Apply Changes
+        <button class="btn btn-sm pull-right" ng-style="{'margin-bottom' : 7 }" ng-disabled="noValidChanges()" ng-click="applyChanges()">Apply Changes
         </button>
     </div>
 </div>
