--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -26,7 +26,10 @@
         <dt>Reference Unit</dt>
         <dd id="refUnitName">{{selectedFlowProperty.referenceUnit}}</dd>
 </dl>
-
+<div>
+    <button class="btn btn-sm pull-right"
+            ng-click="viewFragmentFlowParam()">Flow Details...</button>
+</div>
 <div class="row">
     <div class="col-md-8">
         <div class="sankey-container">
