--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="components/d3/d3-service.js"></script>
     <script src="components/status/status-service.js"></script>
     <script src="home/home.js"></script>
+    <script src="fragment-flow-param/fragment-flow-param.js"></script>
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="process-flow-param/process-flow-param.js"></script>
