--- a/app/lcia-method/lcia-method-detail.html
+++ b/app/lcia-method/lcia-method-detail.html
@@ -44,6 +44,6 @@
                 ng-change="onScenarioChange()"></select>
         <button class="btn btn-sm pull-right" ng-disabled="noValidChanges()" ng-click="applyChanges()">Apply Changes</button>
     </div>
-    <div class="gridStyle" ng-grid="gridOptions" ng-style="dynamicGridStyle"></div>
+    <param-grid options="options" data="gridData" columns="gridColumns" params="params"></param-grid>
 </div>
 
