--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -20,7 +20,7 @@
                 <div ng-repeat="scenario in scenarios" class="row">
                     <div class="lcia-bar-container">
                         <waterfall-chart service="waterfalls[method.lciaMethodID]" index="$index"
-                                         color="method.getDefaultColor()" title="scenario.name"
+                                         color="method.getDefaultColor()" chart-title="scenario.name"
                                          unit="method.referenceFlowProperty.referenceUnit"></waterfall-chart>
                     </div>
                 </div>
