Vis: Directive for param change buttons and fix LCIA Method view (#166)

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
     <script src="app.js"></script>
+    <script src="components/change-buttons/change-buttons-directive.js"></script>
     <script src="components/color-code/color-code.js"></script>
     <script src="components/d3-tip/tip-service.js"></script>
     <script src="components/idmap/idmap-service.js"></script>
