--- a/app/process-flow-param/process-flow-param.html
+++ b/app/process-flow-param/process-flow-param.html
@@ -12,11 +12,13 @@
         <dd>{{lciaMethod.name}}</dd>
     </dl>
     <div>
-        <button class="btn btn-sm pull-right" ng-style="{'margin-bottom' : 7 }" ng-disabled="noValidChanges()" ng-click="applyChanges()">Apply Changes
-        </button>
+        <span class="pull-right">
+            <button type="button" ng-disabled="!canReturn()" ui-sref="^" class="btn btn-link btn-sm">Back to Process LCIA</button>
+            <change-buttons></change-buttons>
+        </span>
     </div>
 </div>
-<div class="row"></div>
+<div class="row"  ng-style="{'margin-bottom' : 7 }"></div>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span class="panel-title">Emission</span>
