--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="process-flow-param/process-flow-param.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
+    <script src="scenario/scenario-detail.js"></script>
     <script src="scenario/scenario-edit.js"></script>
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
