Vis: Fix flow Details button in Fragment Flows view (fixes #174)

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -26,7 +26,7 @@
         <dt>Reference Unit</dt>
         <dd id="refUnitName">{{selectedFlowProperty.referenceUnit}}</dd>
 </dl>
-<div>
+<div class="row">
     <button class="btn btn-sm pull-right"
             ng-click="viewFragmentFlowParam()">Flow Details...</button>
 </div>
