--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="process-flow-param/process-flow-param.js"></script>
+    <script src="process-instance/process-instance.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
     <script src="scenario/scenario-detail.js"></script>
     <script src="scenario/scenario-edit.js"></script>
